<resources>
    <string name="app_name">Products</string>
    <string name="action_settings">Settings</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Products</string>
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
    <string name="empty_view_subtitle_text">Get started by adding a product</string>
    <string name="unknown_breed">Unknown breed</string>
    <string name="category_overview">Overview</string>
    <string name="hint_product_name">Name</string>
    <string name="hint_price">Price</string>
    <string name="hint_quantity">Quantity</string>
    <string name="category_gender">Gender</string>
    <string name="category_supplier">Supplier name</string>
    <string name="hint_product_supplier">Supplier Name</string>
    <string name="unit_pet_weight">kg</string>
    <string name="hint_supplier_number">Supplier Number</string>
    <string name="delete_dialog_msg">Delete this pet?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_insert_product_failed">Error with saving product</string>
    <string name="editor_update_product_successful">Product updated</string>
    <string name="editor_update_product_failed">Error with updating product</string>
    <string name="editor_activity_title_new_product">Add a Product</string>
    <!-- Title for the activity to edit an existing pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>
    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>
    <string name="insert_failed">Error with saving product</string>

    <string name="insert_successful">Product saved successfully</string>



    <string name="update_failed">Error with updating product</string>

    <string name="update_successful">Product updated successfully</string>
    <string name="quantity_change_msg">Quantity was change</string>

    <string name="quantity_finish_msg">Product was finish :( , buy another Product</string>
</resources>
